fixed overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,14 +27,14 @@ header{
     background-color: #25316D;
     width: 100%;
     height: 150px;
-    font-size: 30px;
+    font-size: 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 25px;
 }
 
-.mainContainer, #form, .data-container, section{
+.mainContainer, #form, section{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -57,26 +57,27 @@ header{
 }
 
 .data-container{
+    text-align: center;
     background-color: var(--color-dark-violet);
     margin: 20px;
-    padding: 30px 40px;
+    padding: 20px 40px;
     border-radius: 10px;
-    gap: 5px;
     width: 100%;
     box-shadow: rgb(0 0 0 / 20%) 0 3px 5px -1px, rgb(0 0 0 / 14%) 0 6px 10px 0, rgb(0 0 0 / 12%) 0 1px 18px 0;
 }
 
 .data-container p {
-    font-size: 25px;
+    margin: 5px;
+    font-size: 1.5rem;
 }
 
 .data-container h2{
-    font-size: 40px;
+    font-size: 2rem;
 }
 
 input{
     margin-right: 5px;
-    width: 300px;
+    max-width: 300px;
     height: 45px;
     padding: 0px 10px;
     border-radius: 10px;
@@ -87,7 +88,7 @@ input{
 button{
     border-radius: 10px;
     background-color: var(--color-red);
-    font-size: 20px;
+    font-size: 1.2rem;
     height: 45px;
     padding: 10px 30px;
     box-shadow: rgb(0 0 0 / 20%) 0 3px 5px -1px, rgb(0 0 0 / 14%) 0 6px 10px 0, rgb(0 0 0 / 12%) 0 1px 18px 0;
@@ -100,7 +101,7 @@ button:hover{
 }
 
 #temp {
-    font-size: 80px;
+    font-size: 4rem;
 }
 
 .celsius::after{
@@ -131,5 +132,9 @@ button:hover{
     }
     .data-container{
         width: 75%;
+    }
+
+    form{
+        margin-top: 50px;
     }
 } 
